add node to linux